@@ -90,8 +90,8 @@ public class WebResponse {
     }
 
     private boolean inRange(String range,Integer val) {
-        String boundries[] = range.split("-");
-        if (val < new Integer(boundries[0]) || val > new Integer(boundries[1])) {
+        String[] boundries = range.split("-");
+        if (val < Integer.valueOf(boundries[0]) || val > Integer.valueOf(boundries[1])) {
             return false;
         } else {
             return true;
