@@ -207,8 +207,8 @@ public class WebPlugin extends AbstractPlugin {
     }
 
     private boolean inRange(String range,Integer val){
-        String boundries[] = range.split("-");
-        if(val < new Integer(boundries[0]) || val > new Integer(boundries[1]))
+        String[] boundries = range.split("-");
+        if(val < Integer.valueOf(boundries[0]) || val > Integer.valueOf(boundries[1]))
             return false;
         else
             return true;
